add files to app keeping sveltekit skeleton. it fixes #1

--- a/package.json
+++ b/package.json
@@ -15,24 +15,26 @@
 		"make-topo": "node ./scripts/make-lookup.js && node ./scripts/merge-lookup.js && node ./scripts/make-topo-layers.js && node ./scripts/merge-topo-layers.js"
 	},
 	"devDependencies": {
+		"@onsvisual/svelte-maps": "^1.2.20",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-static": "^3.0.4",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@turf/bbox": "latest",
+		"@turf/meta": "^7.1.0",
 		"@types/eslint": "^9.6.0",
+		"d3-dsv": "^3.0.1",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"mapshaper": "^0.6.99",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
+		"topojson-client": "^3.1.0",
+		"topojson-server": "^3.0.1",
 		"vite": "^5.0.3",
-		"@onsvisual/svelte-maps": "latest",
-		"@turf/bbox": "latest",
-		"@turf/meta": "^7.1.0",
-		"d3-dsv": "^3.0.1",
-		"mapshaper": "^0.6.99",
 		"wkt": "^0.1.1"
 	},
 	"type": "module"
