--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "peru-atlas",
-	"version": "0.0.1",
+	"name": "latam-cartography",
+	"version": "0.0.2",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
